	* added callreference/closure call parse-time type checking
	* implemented UserFuntion::setupCall() so code to set up arguments and
	  the argv variable can be shared between UserFunction::call() and
	  UserFunction::callConstructor()
	* implemented return value type checking at parse time
	* implemented parse-time type checking for the splice and unshift
	  operators

2009.11.28: David Nichols
	* fixed a memory leak in runtime hard type exceptions in lvalue
	  assignments
	* fixed parse time hard type checking with operators that change
	  lvalues (++, --, &=, etc)
	* implemented parse-time checks for hard typing in += operator
	* implemented parse-time checks for hard typing in -= operator
	* implemented parse-time checks for hard typing in *= and /= operators

2009.11.27: David Nichols
	* implemented a new warning: "non-existant-method-call" - this is for
	  method calls to expressions that evaluate to a class known at parse
	  time where the method cannot be found.  This could be a valid call,
	  because the call could only be made on an object of a subclass that
	  implements the method, so to allow the potential error to be 
	  reported but to also allow for backwards-compatibility only a
	  warning is issued
	* set a default warning mask to enable some warnings; in the past some
	  warnings that almost always (or always, in the case of the 
	  "unknown-warning" warning) indicated an error were suppressed by
	  default.  The new default warning mask enables the following
	  warnings: "unknown-warning" (always a mistake), "unreachable-code"
	  (normally an unintentional error), "non-existant-method-call"
	* implemented more parse-time hard typing checks for operators

2009.11.26: David Nichols
	* implemented optional hard type support for global variables, 
	  parse-time checks, etc

2009.11.25: David Nichols
	* added type info to constants and constant resolution
	* fixed memory bug in CryptoHelper - removed unnecessary and incorrect